# marimo-scipy-utils

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  publish.yml
.semgrep/: github-actions.yml
examples/: monte_carlo_demo.py
marimo_scipy_utils/: exceptions.py  marimo_components.py
src/marimo_scipy_utils/: __init__.py  exceptions.py  marimo_components.py
tests/: test_abbrev_format.py  test_components.py  test_generate_ranges.py
