[project]
name = "marimo-scipy-utils"
version = "0.2.0"
description = "A collection of utilities to make it easier to interact with scipy in a marimo notebook, e.g. manipulate distributions, visualize data, etc."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "matplotlib>=3.8.4",
    "scipy>=1.14.1",
]
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = [
    "scipy",
    "matplotlib",
    "marimo",
    "distributions",
    "statistics",
    "visualization",
    "data analysis",
    "data visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/hbmartin/marimo-scipy-utils"
Repository = "https://github.com/hbmartin/marimo-scipy-utils"
Issues = "https://github.com/hbmartin/marimo-scipy-utils/issues"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", "build", "dist"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"src/marimo_scipy_utils/exceptions.py" = ["ANN204", "D100", "D107", "E501"]
"tests/*" = ["ANN", "D", "INP001", "PLR2004", "S101", "SLF001"]
"examples/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=marimo_scipy_utils --cov-report=term-missing"

[tool.coverage.run]
source = ["src/marimo_scipy_utils"]
